fixed login screen on mobile

--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -194,24 +194,14 @@ nav > .submenu > .subbtn {
 }
 
 .content {
-    display: flex;
-
+    display: table;
     flex-direction: column;
-
     background-color: white;
-
-    min-height: auto;
-    width: 1100px;
-    margin: 25px auto;
-    margin-top: 2%;
-    margin-bottom: 2%;
     min-height: auto;
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 2% auto;
     border-width: 2px;
-    padding-bottom: 2%;
-
+    padding: 5px 5px 2%;
     justify-content: center;
     align-items: center;
     /*min-height: 100%;*/
